# WifiTui

./: Cargo.toml
src/: app.rs  main.rs
src/test/: test.rs
